syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";

message GetProductSalesArrangementsRequest {
	int64 CaseId = 1;
}

message GetProductSalesArrangementsResponse {
	repeated SalesArrangement SalesArrangements = 1;

	message SalesArrangement {
		int32 SalesArrangementId = 1;
		google.protobuf.Int32Value OfferId = 2;
		int32 State = 3;
	}
}